# MBUtility

./: .gitignore  Async.h  Bitwise.h  CMakeLists.txt  Context.h  CopyableUnique.h  Dynamic.h  DynamicVariant.h  FileStreams.h  Filesystem.cpp  Filesystem.h  Future.h  IndeterminateInputStream.h  InterfaceAdaptors.h  InterfaceUtils.h  IntrinsicGrejer.cpp  IntrinsicGrejer.h  Iterator.h  LineRetriever.cpp  LineRetriever.h  MBAlgorithms.h  MBCompileDefinitions.cpp  MBCompileDefinitions.h  MBErrorHandling.cpp  MBFIFOBuffer.h  MBFiles.cpp  MBFiles.h  MBFunctional.h  MBInterfaces.cpp  MBInterfaces.h  MBMath.h  MBMathTemplateFunctions.h  MBMatrix.cpp  MBMatrix.h  MBPM_FileInfo  MBPM_FileInfoIgnore  MBPM_PacketInfo  MBRandom.h  MBSourceInfo.json  MBStrings.h  (+23 more)
Doc/: .MBSourceInfo.json.swp  .index.mbd.swp  IO.mbd  MBDocBuild.json  MBPM_PacketInfo  index.mbd
Doc/Code/Classes/: FSObjectInfo.mbd  Filesystem.mbd  LineRetriever.mbd  MBBasicUserAuthenticator.mbd  MBBufferInputStream.mbd  MBFileInputStream.mbd  MBFileOutputStream.mbd  MBOctetInputStream.mbd  MBOctetOutputStream.mbd  MBSearchableInputStream.mbd  MBSearchableOutputStream.mbd  MBStringOutputStream.mbd  OS_Filesystem.mbd
Doc/Code/Functions/: FSErrorToString.mbd  FSTypeToString.mbd  ReadWholeFile.mbd  StringToFSObjectType.mbd  WriteData.mbd  operator!.mbd
Doc/Code/Sources/: .MBMatrix.mbd.swp  Filesystem.mbd  MBCompileDefinitions.mbd  MBErrorHandling.mbd  MBFiles.mbd  MBInterfaces.mbd  MBMatrix.mbd  MBUtilityTest.mbd
Doc/Sources/: .MBMatrix.mbd.swp
MatteLibrary/: Combinatorics.cpp  Combinatorics.h  ContinuedFractions.cpp  ContinuedFractions.h  FigurativeNumbers.cpp  FigurativeNumbers.h  GrafTeori.cpp  GrafTeori.h  LinearDiofSolver.h  QuadraticEquations.cpp  QuadraticEquations.h  TalTeori.cpp  TalTeori.h
